--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9492a2">  <td>23/09/20 17:17:39</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;RegistrationFormTest.close()[pri:0, instance:tests.RegistrationFormTest@7e38a7fe]">&lt;&lt;close</td> 
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>14</td> <td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterTest()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/20 17:17:34</td>   <td>-5123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationFormTest.registrationFormTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.RegistrationFormTest@7e38a7fe]">registrationFormTest</td> 
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>-138</td> <td title="&gt;&gt;TestNG_Annotations.beforeSuite()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterClass()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>-101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.failTest()[pri:0, instance:tests.TestNG_Annotations@686449f9]">failTest</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9492a2">  <td>23/09/20 17:17:24</td>   <td>-15035</td> <td>&nbsp;</td><td title="&gt;&gt;RegistrationFormTest.initializeWebDriver()[pri:0, instance:tests.RegistrationFormTest@7e38a7fe]">&gt;&gt;initializeWebDriver</td> 
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.test0()[pri:0, instance:tests.TestNG_Annotations@686449f9]">test0</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>-111</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeClass()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.test2()[pri:0, instance:tests.TestNG_Annotations@686449f9]">test2</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>-124</td> <td>&nbsp;</td><td title="&gt;&gt;TestNG_Annotations.beforeTest()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>-53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.login()[pri:0, instance:tests.TestNG_Annotations@686449f9]">login</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>310</td> <td title="&lt;&lt;TestNG_Annotations.afterSuite()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNG_Annotations.afterMethod()[pri:0, instance:tests.TestNG_Annotations@686449f9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9492a2">  <td>23/09/23 16:09:27</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNG_Annotations.test1()[pri:0, instance:tests.TestNG_Annotations@686449f9]">test1</td> 
+  <td>main@617901222</td>   <td></td> </tr>
 </table>
